compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__qualified_type_unknown_field.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport gleam\ntype Int {\n  Int(bit_size: gleam.Int, bits: BitArray)\n}\n\npub fn main(not_a_record: gleam.Int) {\n  not_a_record.bits\n}\n"
---
error: Unknown record field
  ┌─ /src/one/two.gleam:8:15
  │
8 │   not_a_record.bits
  │               ^^^^^ This field does not exist

The value being accessed has this type:

    gleam.Int

It does not have any fields.
