compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__qualified_type_use_fn_without_callback.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport some_mod\npub fn main() {\n  use value <- some_mod.do_a_thing(10)\n}\n"
---
----- SOURCE CODE

import some_mod
pub fn main() {
  use value <- some_mod.do_a_thing(10)
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:4:16
  │
4 │   use value <- some_mod.do_a_thing(10)
  │                ^^^^^^^^^^^^^^^^^^^^^^^

The function on the right hand side of `<-` has to take a callback function
as its last argument. But the last argument of this function has type:

    some_mod.NotACallback

See: https://tour.gleam.run/advanced-features/use/
