compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__qualified_type_with_no_name_results_in_an_error.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "pub fn main() -> wibble. { todo }"
---
----- SOURCE CODE
pub fn main() -> wibble. { todo }

----- ERROR
error: Invalid type
  ┌─ /src/one/two.gleam:1:18
  │
1 │ pub fn main() -> wibble. { todo }
  │                  ^^^^^^^ This is not a valid type
