compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__record_update_does_not_stop_at_first_invalid_field_1.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Wibble {\n  Wibble(a: Int, b: Bool)\n}\n\npub fn go(wibble: Wibble) {\n    Wibble(..wibble, c: 1, a: 1.0)\n}"
---
----- SOURCE CODE

pub type Wibble {
  Wibble(a: Int, b: Bool)
}

pub fn go(wibble: Wibble) {
    Wibble(..wibble, c: 1, a: 1.0)
}

----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:7:22
  │
7 │     Wibble(..wibble, c: 1, a: 1.0)
  │                      ^^^^ Did you mean `a`?

The value being accessed has this type:

    Wibble

It has these accessible fields:

    .a
    .b

error: Type mismatch
  ┌─ /src/one/two.gleam:7:28
  │
7 │     Wibble(..wibble, c: 1, a: 1.0)
  │                            ^^^^^^

Expected type:

    Int

Found type:

    Float
